[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "vrext"
version = "1.1.0"
description = "Token-efficient AI-to-AI communication language"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["ai", "agents", "llm", "protocol", "multi-agent", "communication"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/trewlite/vrext"
Repository = "https://github.com/trewlite/vrext"
Issues = "https://github.com/trewlite/vrext/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["vrext*"]
